<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.TakeAssessmentFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/main_option_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/first_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="12dp"
                        android:paddingTop="18dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="12dp"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_circle_fill"
                                android:padding="18dp"
                                android:src="@drawable/ic_cetagory" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/category_1" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_circle_fill"
                                android:padding="18dp"
                                android:src="@drawable/ic_cetagory" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/category_2" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_circle_fill"
                                android:padding="18dp"
                                android:src="@drawable/ic_cetagory" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/category_3" />

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/second_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/first_row"
                        android:orientation="horizontal"
                        android:paddingStart="12dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="18dp"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_circle_fill"
                                android:padding="18dp"
                                android:src="@drawable/ic_cetagory" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/category_4" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_circle_fill"
                                android:padding="18dp"
                                android:src="@drawable/ic_cetagory" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/category_5" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_circle_fill"
                                android:padding="18dp"
                                android:src="@drawable/ic_cetagory" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/category_6" />

                        </LinearLayout>


                    </LinearLayout>

                    <View
                        android:id="@+id/separator"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/second_row"
                        android:background="@color/gray_light" />

                    <TextView
                        android:id="@+id/show_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/separator"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="14dp"
                        android:text="@string/show_more"
                        android:textColor="@color/blue" />


                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/random_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_option_cv"
                android:layout_marginStart="12dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="12dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/blue">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/ic_random"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/random_question"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </com.google.android.material.card.MaterialCardView>


        </RelativeLayout>


    </ScrollView>

</layout>